[gd_scene load_steps=2 format=3 uid="uid://1hbp4ynhvuyg"]

[ext_resource type="Script" uid="uid://bi2jj6p1det7s" path="res://scenes/creation_personnage/etape_2.gd" id="1_5lfou"]

[node name="Frame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5lfou")

[node name="Arri√®re-plan" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.580392, 0.564706, 1)

[node name="Titre" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.043
anchor_right = 0.5
anchor_bottom = 0.043
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Choisissez la race du personnage"

[node name="Retour" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.926
anchor_right = 0.042
anchor_bottom = 0.926
offset_top = -31.0
offset_right = 61.0
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Retour"

[node name="Etapes" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.053
anchor_right = 0.084
anchor_bottom = 0.053
offset_right = 93.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 25
text = "Etapes :
1/12"

[node name="Conteneur_de_races" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Scrolleur" type="ScrollContainer" parent="Conteneur_de_races"]
layout_mode = 2

[node name="Conteneur" type="VBoxContainer" parent="Conteneur_de_races/Scrolleur"]
layout_mode = 2

[node name="Panneau" type="Panel" parent="Conteneur_de_races"]
layout_mode = 2

[node name="RaceName" type="Label" parent="Conteneur_de_races/Panneau"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="RaceDesc" type="Label" parent="Conteneur_de_races/Panneau"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="RaceBonus" type="Label" parent="Conteneur_de_races/Panneau"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="RaceVitesse" type="Label" parent="Conteneur_de_races/Panneau"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="RaceTraits" type="Label" parent="Conteneur_de_races/Panneau"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="Retour" to="." method="_on_retour_pressed"]
